--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
@@ -35,4 +26,35 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 700px;
+  margin-top: 30px;
+}
+
+
+.task-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.task-btn {
+  background-color: black;
+  color: white;
+  width: 110px;
+}
+
+.task-btn.completed {
+  background-color: green;
+}
+
+.task-content.completed {
+  text-decoration: line-through;
 }
